--- a/SettingNPM/package.json
+++ b/SettingNPM/package.json
@@ -2,12 +2,20 @@
   "name": "settingnpm",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "browserify script.js > bundle.js && live-server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EdsonJosueAL/UDemy"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EdsonJosueAL/UDemy"
+  },
+  "homepage": "https://github.com/EdsonJosueAL/UDemy",
   "dependencies": {
     "lodash": "^4.17.10"
   }
