--- a/robofriendsRedux/package.json
+++ b/robofriendsRedux/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
     "tachyons": "^4.9.1"
   },
   "scripts": {
